--- a/Revised JB version/src/javablock/gui/MainWindow.form
+++ b/Revised JB version/src/javablock/gui/MainWindow.form
@@ -451,6 +451,7 @@
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItem9">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Jump"/>
+                <Property name="toolTipText" type="java.lang.String" value="Jump"/>
               </Properties>
             </MenuItem>
           </SubComponents>
