Jump Icon Refactor

--- a/Revised JB version/src/javablock/gui/MainWindow.form
+++ b/Revised JB version/src/javablock/gui/MainWindow.form
@@ -465,6 +465,9 @@
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItem9">
               <Properties>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+                  <Connection code="new ImageIcon(JBlock.getIcon(JBlock.Type.JUMP))" type="code"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="Jump"/>
                 <Property name="toolTipText" type="java.lang.String" value="Jump"/>
               </Properties>
