For Loop ToolTip  Refactor

--- a/Revised JB version/src/javablock/gui/MainWindow.form
+++ b/Revised JB version/src/javablock/gui/MainWindow.form
@@ -476,6 +476,7 @@
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItem10">
               <Properties>
                 <Property name="text" type="java.lang.String" value="For Loop"/>
+                <Property name="toolTipText" type="java.lang.String" value="For Loop"/>
               </Properties>
             </MenuItem>
           </SubComponents>
