For Loop Icon  Refactor

--- a/Revised JB version/src/javablock/gui/MainWindow.form
+++ b/Revised JB version/src/javablock/gui/MainWindow.form
@@ -475,6 +475,9 @@
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItem10">
               <Properties>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+                  <Connection code="new ImageIcon(JBlock.getIcon(JBlock.Type.FORLOOP))" type="code"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="For Loop"/>
                 <Property name="toolTipText" type="java.lang.String" value="For Loop"/>
               </Properties>
