Added drawing to while loop.

--- a/Revised JB version/src/javablock/flowchart/generator/For.form
+++ b/Revised JB version/src/javablock/flowchart/generator/For.form
@@ -182,6 +182,9 @@
           <ResourceString bundle="config/lang/lang.properties" key="generator.for.declare" replaceFormat="java.util.ResourceBundle.getBundle(&quot;{bundleNameSlashes}&quot;).getString(&quot;{key}&quot;)"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="declareActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel3">
       <Properties>
